<resources>
    <string name="app_name">NMedia 1.3</string>
    <string name="nmedia">NMedia!</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="open_menu" translatable="false">Open menu</string>
    <string name="video" translatable="false">Video</string>
    <string name="icon_for_views" translatable="false">Icon for views</string>
    <string name="icon_for_share" translatable="false">Icon for share</string>
    <string name="icon_for_like" translatable="false">Icon for like</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_redact">Redact</string>
    <string name="button_play" translatable="false">PlayButton</string>
    <string name="image_of_video" translatable="false">Image Of Video</string>
    <string name="create_new_post">Create New Post</string>
</resources>